# SwiftRoad

./: .gitignore  Makefile  README.md  pyproject.toml
swiftroad/: manage.py
swiftroad/activities/: admin.py  models.py  tests.py  urls.py  views.py
swiftroad/activities/migrations/: 0001_initial.py  0002_auto_20201031_1527.py
swiftroad/activities/templates/activities/: index.html
swiftroad/journal/: admin.py  models.py  tests.py  urls.py  views.py
swiftroad/journal/migrations/: 0001_initial.py
swiftroad/swiftroad/: asgi.py  settings.py  urls.py  wsgi.py
swiftroad/templates/: base.html
