[tool.poetry]
name = "swiftroad"
version = "0.1.0"
description = ""
authors = ["Zachary Leinweber <zleinweb@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
Jinja2 = "2.11.2"
Django = "3.1.2"
black = "^20.8b1"
pytest = "^6.1.1"
click = "^7.1.2"
rich = "^9.1.0"
pylint = "^2.6.0"
djangorestframework = "^3.12.1"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
pylint-django = "2.2.0"

[tool.poetry.dev-dependencies]

[tool.pylint.master]
load-plugins = ["pylint_django"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
